# whisper-mlx-myidea

./: README.md  custom_term.txt  generate_report_from_voice.ipynb  pyproject.toml
