[tool.poetry]
name = "whisper-meeting"
version = "0.1.0"
description = ""
authors = ["Hajime Ikeda <basalaryman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whisper-cli = "^0.0.5"
jupyterlab = "^4.3.5"
jupyterlab-code-formatter = "^3.0.2"
isort = "^6.0.0"
black = "^25.1.0"
llvmlite = "^0.44.0"
torch = "^2.6.0"
transformers = "^4.48.3"
datasets = "^3.2.0"
evaluate = "^0.4.3"
accelerate = "^1.3.0"
ipywidgets = "^8.1.5"
tqdm = "^4.67.1"
numpy = "<=2.1"
mlx-whisper = "^0.4.2"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
